--- a/action.yml
+++ b/action.yml
@@ -34,6 +34,7 @@ runs:
       uses: "actions/setup-python@v4"
       with:
           python-version: "3.10"
+          cache: 'pip'
     - name: Install dbt
       run: "pip3 install ${{ inputs.dbt-package }}"
       shell: bash
